# hitsz-radar

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  README.md  calibrate_get_imgs.cpp  main.cpp  radar.cbp  不知道啥的标定法.md
Testing/: TAG
Testing/20210703-0758/: Configure.xml
Testing/Temporary/: LastBuild_20210703-0758.log.tmp
cam_calibrate/: calibrate.npz
cam_calibrate2/: calibrate.npz
include/: compile_config.h  compile_config.h.in  radar.hpp
programs/: main.cpp  new-serial-test.cpp  pnp_test.cpp  radar_camera-test.cpp  rm-reference-test.cpp  ui-test.cpp
programs/old/: calibration-test.cpp  calibration-video.cpp  calibration.cpp  homography-test.cpp  main_minimap.cpp  mapping2-test.cpp  serial-test.cpp
src/armor/include/armor_finder/: armor_box.h  armor_finder.h
src/armor/include/show_images/: show_images.h
src/armor/src/armor_finder/: armor_finder.cpp
src/armor/src/armor_finder/armor_box/: armor_box.cpp
src/armor/src/armor_finder/find/: find_armor_box.cpp  find_light_blobs.cpp
src/armor/src/armor_finder/searching_state/: searching_state.cpp
src/armor/src/armor_finder/send_target/: send_target.cpp
src/armor/src/show_images/: show_images.cpp
src/com/include/: CRC.h  mcu_send.h  rmreference.h  rmrefs.h  rmserial.h
src/com/src/: CRC.cpp  mcu_send.cpp  rmreference.cpp  rmserial.cpp  serial.cc
src/mapping/include/: 3Dpnp.h  mapping.h
src/mapping/src/: 3Dpnp.cpp  kdTree.cpp  mapping.cpp
src/minimap/include/: minimap.h
src/minimap/src/: minimap.cpp
src/others/include/: refs.h  rmutils.h
src/others/include/camera/: DxImageProc.h  GxIAPI.h  cam_wrapper.h
src/others/src/: rmutils.cpp
src/others/src/camera/: cam_wrapper.cpp
src/rmcamera/include/: rmcamera.h
src/rmcamera/src/: rmcamera.cpp
src/rmconfig/include/: rmcamera_config.h  rmconfig.h
src/rmconfig/src/: rmconfig.cpp
